# clockify-manager-tg

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: .env.example  clockify_api.py  handlers.py  main.py  start_commands.py  states.py  time_entry_commands.py  utils.py
app/db/: engine.py  methods.py
